Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/Ticket_Booking__c.object-meta.xml
<CustomObject>
    <label>Ticket Booking</label>
    <nameField>
        <displayFormat>TN{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>