Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/Amount_Already_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Already_Paid__c</fullName>
    <label>Amount Already Paid</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Ticket__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>