Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Ticket Bookings</relationshipLabel>
    <relationshipName>Ticket_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>