Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/Movie_Name__c.field-meta.xml
<CustomField>
    <fullName>Movie_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie Name</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Ticket Bookings</relationshipLabel>
    <relationshipName>Ticket_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>