Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/No_of_Ticket__c.field-meta.xml
<CustomField>
    <fullName>No_of_Ticket__c</fullName>
    <label>No. of Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>