Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>Total_Amount__c  - Amount_Already_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>