Movie ticket system/force-app/main/default/objects/Ticket_Booking__c/fields/Seat_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seat Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Seat_Pricing__c.Movie_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Movie_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Seat_Pricing__c</referenceTo>
    <relationshipLabel>Ticket Bookings</relationshipLabel>
    <relationshipName>Ticket_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>